--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "trailingComma": "none",
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "bracketSpacing": true,
+  "eslintIntegration": true,
+  "printWidth": 120
 }
