--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-
+    name: Build
     runs-on: ubuntu-latest
 
     strategy:
@@ -28,4 +28,17 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm test
+
+  linters:
+    name: Run linter
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - run: npm run lint
+
+  tests:
+    name: Run tests
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - run: npm run test:cov
