Use DTO instead of entities for controllers input/ouput

--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
       ".module.ts",
       ".entity.ts",
       "src/main.ts",
-      ".mock.ts"
+      ".mock.ts",
+      "index.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
